--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,2 +1,2 @@
 [target]
-54.254.161.151 ansible_user=ubuntu ansible_ssh_private_key_file=/home/ubuntu/project/tf/terraform-archana-keypair.pem
+54.254.161.151 ansible_user=ubuntu
